--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -113,8 +113,8 @@
 
 .dropdownTrigger {
   background-color: white;
-  padding: 15px 20px;
   border-radius: 15px;
+  padding: 5px 20px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
   display: flex;
   justify-content: space-between;
@@ -136,8 +136,20 @@
 .triggerContent {
   display: flex;
   align-items: center;
+  padding: 10px 0;
   gap: 12px;
   flex: 1;
+}
+
+.inputDestino {
+  border: none;
+  padding: 10px 0;
+  width: 100%;
+  margin-left: 10px;
+}
+
+.inputDestino:focus {
+  outline: none;
 }
 
 .textoTrigger {
@@ -209,7 +221,7 @@
   background-color: #fff8e1;
 }
 
-.fadeIn {
+.active {
   animation: fadeIn 0.5s ease-in-out;
 }
 
